# tauri_classification

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yaml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data.rs  dataset.rs  lib.rs  main.rs  model.rs  predict.rs  training.rs
src/cloud/: data.js  firebase.js  split.js
src/components/: CapturedImage.jsx  Controls.jsx  FileCounts.jsx  ImageGrid.jsx  LabelButtons.jsx  TabSelector.jsx  VideoPreview.jsx
src/hooks/: useOpenCv.jsx
src/screens/: Images.jsx  MailAuth.jsx  Run.jsx  Save.jsx  Train.jsx
