[package]
name = "tauri_classification"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_classification_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
burn = { version = "0.14.0", features = ["wgpu", "train", "vision", "network"] }
flate2 = {version="1.0.33"}
dirs = "5.0.1"
tauri-plugin-fs = "2.0.0-rc"
image = "0.25.2"
